Добавил ссылки в header

--- a/form.html
+++ b/form.html
@@ -14,16 +14,16 @@
     <nav class="header__menu menu">
       <ul class="menu__list">
         <li class="menu__item">
-          Каталог товаров
+          <a class="header__link" href="">Каталог товаров</a>
         </li>
         <li class="menu__item">
-          Вязание на заказ
+          <a class="header__link" href="">Вязание на заказ</a>
         </li>
         <li class="menu__item menu__item--search">
-          Поиск по сайту
+          <a class="header__link" href="">Поиск по сайту</a>
         </li>
         <li class="menu__item menu__item--cart">
-          Корзина: пока пуста
+          <a class="header__link" href="">Корзина: пока пуста</a>
         </li>
       </ul>
       <button class="header__button"></button>
@@ -103,7 +103,7 @@
         </fieldset>
         <fieldset class="form__item">
           <legend class="form__name">ДОП</legend>
-          <textarea class="form__textarea input input--textarea" name="comment" placeholder="Опишите все ваши пожелания к заказу">
+          <textarea class="form__textarea input input--textarea" name="comment" placeholder="Опишите все ваши пожелания к заказу"></textarea>
         </fieldset>
         <p class="form__footnote">*Поля обязательны для заполнения</p>
         <button class="form__button button" type="submit">ОТПРАВИТЬ ЗАКАЗ</button>
