--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <nav class="header__menu menu">
       <ul class="menu__list">
         <li class="menu__item">
-          Каталог товаров
+          <a class="header__link" href="">Каталог товаров</a>
         </li>
         <li class="menu__item">
-          Вязание на заказ
+          <a class="header__link" href="">Вязание на заказ</a>
         </li>
         <li class="menu__item menu__item--search">
-          Поиск по сайту
+          <a class="header__link" href="">Поиск по сайту</a>
         </li>
         <li class="menu__item menu__item--cart">
-          Корзина: пока пуста
+          <a class="header__link" href="">Корзина: пока пуста</a>
         </li>
       </ul>
       <button class="header__button"></button>
