Настроил сборку и написал gulpfile

--- a/source/index.html
+++ b/source/index.html
@@ -2,9 +2,11 @@
 <html lang="ru">
 
 <head>
+  <link rel="stylesheet" href="css/style.css">
   <meta charset="utf-8">
   <title>Мишка</title>
 </head>
+
 <body class="page">
   <header class="page__heder header">
     <div class="header__logo logo">
@@ -30,6 +32,7 @@
   </header>
   <main class="page__content content">
     <h1 class="visually-hidden">Мишка</h1>
+
     <section class="promo">
       <h2 class="promo__title">Милые штучки ручной работы для дома</h2>
       <div class="promo__block promo-block promo-block--light">
@@ -95,7 +98,9 @@
       <div class="reviews__slider slider">
         <article class="reviews__item review">
           <p class="review__text">
-            Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+            Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных
+            инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более
+            стильными, а также набирают больше лайков!
           </p>
           <span class="review__author">Анастасия Красильникова</span>
           <span class="review__instagram">@misssssiskras</span>
@@ -148,4 +153,5 @@
     </footer>
   </main>
 </body>
+
 </html>
