--- a/source/form.html
+++ b/source/form.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+  <link rel="stylesheet" href="css/style.css">
   <meta charset="utf-8">
   <title>Мишка</title>
 </head>
@@ -9,25 +10,27 @@
 <body class="page">
   <header class="page__heder header">
     <div class="header__logo logo">
-      <img class="logo__image">
+      <a class="logo__link" href="index.html">
+        <img class="logo__image" src="img/mishka-logo-mobile.svg" width="86" height="35" alt="Логотип 'Мишка'">
+      </a>
     </div>
     <nav class="header__menu menu">
       <ul class="menu__list">
         <li class="menu__item">
-          <a class="header__link" href="">Каталог товаров</a>
+          <a class="menu__link" href="">Каталог товаров</a>
         </li>
         <li class="menu__item">
-          <a class="header__link" href="">Вязание на заказ</a>
+          <a class="menu__link" href="">Вязание на заказ</a>
         </li>
         <li class="menu__item menu__item--search">
-          <a class="header__link" href="">Поиск по сайту</a>
+          <a class="menu__link" href="">Поиск по сайту</a>
         </li>
         <li class="menu__item menu__item--cart">
-          <a class="header__link" href="">Корзина: пока пуста</a>
+          <a class="menu__link" href="">Корзина: пока пуста</a>
         </li>
       </ul>
-      <button class="header__button"></button>
     </nav>
+    <button class="header__button header__button--menu-opened"></button>
   </header>
   <main class="page__content content">
     <div class="content__title-wrapper">
@@ -38,75 +41,97 @@
         Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы
         уточнить детали.
       </p>
+
       <form class="form__body">
         <fieldset class="form__item">
-          <legend class="form__name">ТИП</legend>
-          <label class="form__label">
-            <input class="form__input-radio" name="type" type="radio" value="accessory">
-            Аксессуар для интерьера
-          </label>
-          <label class="form__label">
-            <input class="form__input-radio" name="type" type="radio" value="toy">
-            Детская игрушка
-          </label>
+          <legend class="form__name form__name--type">ТИП</legend>
+
+          <div class="form__radio radio">
+            <input class="radio__input" id="radio-1" name="type" type="radio" value="accessory" checked>
+            <label class="radio__label" for="radio-1">
+              Аксессуар для интерьера
+            </label>
+          </div>
+
+          <div class="form__radio radio">
+            <input class="radio__input" id="radio-2" name="type" type="radio" value="toy">
+            <label class="radio__label" for="radio-2">
+              Детская игрушка
+            </label>
+          </div>
         </fieldset>
+
         <fieldset class="form__item form__item--gray">
-          <legend class="form__name">ЦВЕТ</legend>
-          <label class="form__label">
-            <input class="form__input-checkbox" name="color" type="checkbox" value="white" checked>
-            Белый
-          </label>
-          <label class="form__label">
-            <input class="form__input-checkbox" name="color" type="checkbox" value="tiffany">
-            «Тиффани»
-          </label>
-          <label class="form__label">
-            <input class="form__input-checkbox" name="color" type="checkbox" value="pink">
-            Розовый
-          </label>
-          <label class="form__label">
-            <input class="form__input-checkbox" name="color" type="checkbox" value="gray">
-            Серый
-          </label>
-          <label class="form__label">
-            <input class="form__input-checkbox" name="color" type="checkbox" value="black">
-            Черный
-          </label>
-          <label class="form__label">
-            <input class="form__input-checkbox" name="color" type="checkbox" value="orange">
-            Оранжевый
-          </label>
+          <legend class="form__name form__name--color">ЦВЕТ</legend>
+
+          <div class="form__checkbox checkbox">
+            <input class="checkbox__input" id="checkbox-1" name="color" type="checkbox" value="white" checked>
+            <label class="checkbox__label" for="checkbox-1">Белый </label>
+          </div>
+
+
+          <div class="form__checkbox checkbox">
+            <input class="checkbox__input" id="checkbox-2" name="color" type="checkbox" value="gray" checked>
+            <label class="checkbox__label" for="checkbox-2">Серый</label>
+          </div>
+
+
+          <div class="form__checkbox checkbox">
+            <input class="checkbox__input" id="checkbox-3"  name="color" type="checkbox" value="tiffany">
+            <label class="checkbox__label" for="checkbox-3" >«Тиффани»</label>
+          </div>
+
+          <div class="form__checkbox checkbox">
+            <input  class="checkbox__input" id="checkbox-4" name="color" type="checkbox" value="black">
+            <label  class="checkbox__label" for="checkbox-4">Черный</label>
+          </div>
+
+
+          <div class="form__checkbox checkbox">
+            <input class="checkbox__input" id="checkbox-5" name="color" type="checkbox" value="pink">
+            <label class="checkbox__label"  for="checkbox-5">Розовый</label>
+          </div>
+
+
+          <div class="form__checkbox checkbox">
+            <input class="checkbox__input" id="checkbox-6"  name="color" type="checkbox" value="orange">
+            <label class="checkbox__label" for="checkbox-6">Оранжевый</label>
+          </div>
         </fieldset>
+
         <fieldset class="form__item">
-          <legend class="form__name">ФИО</legend>
-          <label class="form__label">
-            Имя:
-            <input class="form__input-text input" type="text" name="name" placeholder="Введите ваше имя*">
-          </label>
-          <label class="form__label">
-            Фамилия:
-            <input class="form__input-text input" type="text" name="surname" placeholder="Укажите фамилию*">
-          </label>
-          <label class="form__label">
-            Отчество:
-            <input class="form__input-text input " type="text" name="patronymic"
-              placeholder="Отчество, если желаете">
-          </label>
+          <legend class="form__name form__name--fio">ФИО</legend>
+
+          <label class="form__label form__label--input" for="input-1">Имя:</label>
+          <input class="form__input input" id="input-1" type="text" name="name" placeholder="Введите ваше имя*">
+
+
+          <label class="form__label form__label--input" for="input-2">Фамилия:</label>
+          <input class="form__input input" id="input-2" type="text" name="surname" placeholder="Укажите фамилию*">
+
+
+          <label class="form__label form__label--input" for="input-3">Отчество:</label>
+          <input class="form__input input " id="input-3" type="text" name="patronymic" placeholder="Отчество, если желаете">
         </fieldset>
+
         <fieldset class="form__item form__item--gray">
-          <legend class="form__name">ТЕЛ</legend>
+          <legend class="form__name form__name--tel">ТЕЛ</legend>
           <input class="form__input-phone input input--phone" type="tel" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
         </fieldset>
+
         <fieldset class="form__item form__item--gray">
-          <legend class="form__name">E-mail</legend>
+          <legend class="form__name form__name--mail">E-mail</legend>
           <input class="form__input-mail input input--mail" type="mail" name="mail" placeholder="Ваш Email*">
         </fieldset>
+
         <fieldset class="form__item">
-          <legend class="form__name">ДОП</legend>
-          <textarea class="form__textarea input input--textarea" name="comment" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+          <legend class="form__name form__name--comment">ДОП</legend>
+          <textarea class="form__textarea input input--textarea" name="comment"
+            placeholder="Опишите все ваши пожелания к заказу"></textarea>
         </fieldset>
+
         <p class="form__footnote">*Поля обязательны для заполнения</p>
-        <button class="form__button button" type="submit">ОТПРАВИТЬ ЗАКАЗ</button>
+        <button class="form__button button button--form" type="submit">ОТПРАВИТЬ ЗАКАЗ</button>
       </form>
     </section>
   </main>
@@ -120,12 +145,9 @@
       <li class="socials__item socials__item--twitter"></li>
     </ul>
     <div class="footer__creator creator">
-      <p class="crator__desc">Разработано</p>
-      <div class="crator__logo">
-        <img class="crator__image">
-      </div>
+      <p class="creator__desc">Разработано</p>
+      <img class="creator__logo" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Академии">
     </div>
   </footer>
 </body>
-
 </html>
