--- a/source/form.html
+++ b/source/form.html
@@ -17,7 +17,7 @@
     <nav class="header__menu menu">
       <ul class="menu__list">
         <li class="menu__item">
-          <a class="menu__link" href="">Каталог товаров</a>
+          <a class="menu__link" href="catalog.html">Каталог товаров</a>
         </li>
         <li class="menu__item">
           <a class="menu__link" href="">Вязание на заказ</a>
