--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
     <nav class="header__menu menu">
       <ul class="menu__list">
         <li class="menu__item">
-          <a class="menu__link" href="">Каталог товаров</a>
+          <a class="menu__link" href="catalog.html">Каталог товаров</a>
         </li>
         <li class="menu__item">
           <a class="menu__link" href="form.html">Вязание на заказ</a>
@@ -44,28 +44,28 @@
         <p class="promo-block__name">Детские игрушки</p>
       </div>
     </section>
-    <section class="product">
-      <h2 class="product__title">Вязаные корзинки</h2>
-      <h3 class="product__subtitle">ТОВАР НЕДЕЛИ</h3>
-      <p class="product__desc">Экологически чистая пряжа,
+    <section class="main-product">
+      <h2 class="main-product__title">Вязаные корзинки</h2>
+      <h3 class="main-product__subtitle">ТОВАР НЕДЕЛИ</h3>
+      <p class="main-product__desc">Экологически чистая пряжа,
         ручная работа. Доступны в шести расцветках, и трех размерах.</p>
-      <table class="product__info product-info">
-        <tr class="product-info__row">
-          <td class="product-info__column">Цвет:</td>
+      <table class="main-product__info main-product-info">
+        <tr class="main-product-info__row">
+          <td class="main-product-info__column">Цвет:</td>
           <td>«Тиффани»/серый</td>
         </tr>
-        <tr class="product-info__row">
-          <td class="product-info__column">Диаметр:</td>
+        <tr class="main-product-info__row">
+          <td class="main-product-info__column">Диаметр:</td>
           <td>25 см</td>
         </tr>
-        <tr class="product-info__row">
-          <td class="product-info__column">Высота:</td>
+        <tr class="main-product-info__row">
+          <td class="main-product-info__column">Высота:</td>
           <td>15 см</td>
         </tr>
       </table>
-      <img class="product__image" src="img/triple-set-mobile 1.jpg" width="260px" height="315px" alt="Три вязанных корзинки">
-      <p class="product__price">Цена: 990 руб.</p>
-      <button class="product__button button">ЗАКАЗАТЬ</button>
+      <img class="main-product__image" src="img/triple-set-mobile 1.jpg" width="260px" height="315px" alt="Три вязанных корзинки">
+      <p class="main-product__price">Цена: 990 руб.</p>
+      <button class="main-product__button button">ЗАКАЗАТЬ</button>
     </section>
     <section class="features">
       <h2 class="features__title">Коротко о нас:</h2>
@@ -163,21 +163,21 @@
       <button class="contacts__button button">Напишите нам</button>
 
     </section>
-    <footer class="page__footer footer">
-      <div class="footer__logo logo">
-        <img class="logo__image">
-      </div>
-      <ul class="footer__socials socials">
-        <li class="socials__item socials__item--instagram"></li>
-        <li class="socials__item socials__item--facebook"></li>
-        <li class="socials__item socials__item--twitter"></li>
-      </ul>
-      <div class="footer__creator creator">
-        <p class="creator__desc">Разработано</p>
-        <img class="creator__logo" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Академии">
-      </div>
-    </footer>
   </main>
+  <footer class="page__footer footer">
+    <div class="footer__logo logo">
+      <img class="logo__image">
+    </div>
+    <ul class="footer__socials socials">
+      <li class="socials__item socials__item--instagram"></li>
+      <li class="socials__item socials__item--facebook"></li>
+      <li class="socials__item socials__item--twitter"></li>
+    </ul>
+    <div class="footer__creator creator">
+      <p class="creator__desc">Разработано</p>
+      <img class="creator__logo" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Академии">
+    </div>
+  </footer>
 </body>
 
 </html>
