--- a/source/form.html
+++ b/source/form.html
@@ -9,24 +9,33 @@
 
 <body class="page">
   <header class="page__heder header">
-    <div class="header__logo logo">
-      <a class="logo__link" href="index.html">
-        <img class="logo__image" src="img/mishka-logo-mobile.svg" width="86" height="35" alt="Логотип 'Мишка'">
-      </a>
-    </div>
     <nav class="header__menu menu">
       <ul class="menu__list">
-        <li class="menu__item">
+        <li class="menu__item menu__item--logo">
+          <a class="menu__link menu__link--logo" href="index.html">
+            <img class="menu__image" src="img/mishka-logo-mobile.svg" width="86" height="35" alt="Логотип 'Мишка'">
+          </a>
+        </li>
+        <li class="menu__item menu__item--catalog">
           <a class="menu__link" href="catalog.html">Каталог товаров</a>
         </li>
-        <li class="menu__item">
-          <a class="menu__link" href="">Вязание на заказ</a>
+        <li class="menu__item menu__item--form">
+          <a class="menu__link" href="form.html">Вязание на заказ</a>
         </li>
         <li class="menu__item menu__item--search">
           <a class="menu__link" href="">Поиск по сайту</a>
         </li>
         <li class="menu__item menu__item--cart">
           <a class="menu__link" href="">Корзина: пока пуста</a>
+        </li>
+        <li class="menu__item menu__item--delivery menu__item--hidden">
+          <a class="menu__link" href="">Бесплатная доставка по России</a>
+        </li>
+        <li class="menu__item  menu__item--hidden">
+          <a class="menu__link" href="">Новые поступления</a>
+        </li>
+        <li class="menu__item menu__item--hidden">
+          <a class="menu__link" href="">Распродажа</a>
         </li>
       </ul>
     </nav>
@@ -36,6 +45,7 @@
     <div class="content__title-wrapper">
       <h1 class="content__title">Вязание на заказ</h1>
     </div>
+
     <section class="content_form form">
       <p class="form__desc">
         Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы
@@ -43,25 +53,28 @@
       </p>
 
       <form class="form__body">
-        <fieldset class="form__item">
+        <fieldset class="form__item form__item--radio">
           <legend class="form__name form__name--type">ТИП</legend>
 
-          <div class="form__radio radio">
-            <input class="radio__input" id="radio-1" name="type" type="radio" value="accessory" checked>
-            <label class="radio__label" for="radio-1">
-              Аксессуар для интерьера
-            </label>
-          </div>
+          <div class="form__inner-wrapper">
+            <div class="form__radio radio">
+              <input class="radio__input" id="radio-1" name="type" type="radio" value="accessory" checked>
+              <label class="radio__label" for="radio-1">
+                Аксессуар для интерьера
+              </label>
+            </div>
 
-          <div class="form__radio radio">
-            <input class="radio__input" id="radio-2" name="type" type="radio" value="toy">
-            <label class="radio__label" for="radio-2">
-              Детская игрушка
-            </label>
+            <div class="form__radio radio">
+              <input class="radio__input" id="radio-2" name="type" type="radio" value="toy">
+              <label class="radio__label" for="radio-2">
+                Детская игрушка
+              </label>
+            </div>
+
           </div>
         </fieldset>
 
-        <fieldset class="form__item form__item--gray">
+        <fieldset class="form__item form__item--gray form__item--checkbox">
           <legend class="form__name form__name--color">ЦВЕТ</legend>
 
           <div class="form__checkbox checkbox">
@@ -77,67 +90,74 @@
 
 
           <div class="form__checkbox checkbox">
-            <input class="checkbox__input" id="checkbox-3"  name="color" type="checkbox" value="tiffany">
-            <label class="checkbox__label" for="checkbox-3" >«Тиффани»</label>
+            <input class="checkbox__input" id="checkbox-3" name="color" type="checkbox" value="tiffany">
+            <label class="checkbox__label" for="checkbox-3">«Тиффани»</label>
           </div>
 
           <div class="form__checkbox checkbox">
-            <input  class="checkbox__input" id="checkbox-4" name="color" type="checkbox" value="black">
-            <label  class="checkbox__label" for="checkbox-4">Черный</label>
+            <input class="checkbox__input" id="checkbox-4" name="color" type="checkbox" value="black">
+            <label class="checkbox__label" for="checkbox-4">Черный</label>
           </div>
 
 
           <div class="form__checkbox checkbox">
             <input class="checkbox__input" id="checkbox-5" name="color" type="checkbox" value="pink">
-            <label class="checkbox__label"  for="checkbox-5">Розовый</label>
+            <label class="checkbox__label" for="checkbox-5">Розовый</label>
           </div>
 
 
           <div class="form__checkbox checkbox">
-            <input class="checkbox__input" id="checkbox-6"  name="color" type="checkbox" value="orange">
+            <input class="checkbox__input" id="checkbox-6" name="color" type="checkbox" value="orange">
             <label class="checkbox__label" for="checkbox-6">Оранжевый</label>
           </div>
         </fieldset>
 
-        <fieldset class="form__item">
+        <fieldset class="form__item form__item--fio">
           <legend class="form__name form__name--fio">ФИО</legend>
 
-          <label class="form__label form__label--input" for="input-1">Имя:</label>
-          <input class="form__input input" id="input-1" type="text" name="name" placeholder="Введите ваше имя*">
+          <div class="form__input-wrapper">
+            <label class="form__label form__label--input" for="input-1">Имя:</label>
+            <input class="form__input input" id="input-1" type="text" name="name" placeholder="Введите ваше имя*">
+          </div>
 
+          <div class="form__input-wrapper">
+            <label class="form__label form__label--input" for="input-2">Фамилия:</label>
+            <input class="form__input input" id="input-2" type="text" name="surname" placeholder="Укажите фамилию*">
+          </div>
 
-          <label class="form__label form__label--input" for="input-2">Фамилия:</label>
-          <input class="form__input input" id="input-2" type="text" name="surname" placeholder="Укажите фамилию*">
-
-
-          <label class="form__label form__label--input" for="input-3">Отчество:</label>
-          <input class="form__input input " id="input-3" type="text" name="patronymic" placeholder="Отчество, если желаете">
+          <div class="form__input-wrapper">
+            <label class="form__label form__label--input" for="input-3">Отчество:</label>
+            <input class="form__input input " id="input-3" type="text" name="patronymic"
+              placeholder="Отчество, если желаете">
+          </div>
         </fieldset>
 
-        <fieldset class="form__item form__item--gray">
+        <fieldset class="form__item form__item--gray form__item--tel">
           <legend class="form__name form__name--tel">ТЕЛ</legend>
-          <input class="form__input-phone input input--phone" type="tel" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
+          <input class="form__input-phone input input--tel" type="tel" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
         </fieldset>
 
-        <fieldset class="form__item form__item--gray">
+        <fieldset class="form__item form__item--gray form__item--email">
           <legend class="form__name form__name--mail">E-mail</legend>
           <input class="form__input-mail input input--mail" type="mail" name="mail" placeholder="Ваш Email*">
         </fieldset>
 
-        <fieldset class="form__item">
+        <fieldset class="form__item form__item--comment">
           <legend class="form__name form__name--comment">ДОП</legend>
           <textarea class="form__textarea input input--textarea" name="comment"
             placeholder="Опишите все ваши пожелания к заказу"></textarea>
         </fieldset>
 
-        <p class="form__footnote">*Поля обязательны для заполнения</p>
-        <button class="form__button button button--form" type="submit">ОТПРАВИТЬ ЗАКАЗ</button>
+        <div class="form__button-container">
+          <p class="form__footnote">*Поля обязательны для заполнения</p>
+          <button class="form__button button button--form" type="submit">ОТПРАВИТЬ ЗАКАЗ</button>
+        </div>
       </form>
     </section>
   </main>
   <footer class="page__footer footer">
     <div class="footer__logo logo">
-      <img class="logo__image">
+      <img class="logo__image" src="img/logo-footer.svg" width="102" height="34" alt="Логотип 'Мишка'">
     </div>
     <ul class="footer__socials socials">
       <li class="socials__item socials__item--instagram"></li>
@@ -150,4 +170,5 @@
     </div>
   </footer>
 </body>
+
 </html>
