--- a/source/catalog.html
+++ b/source/catalog.html
@@ -54,8 +54,11 @@
     <section class="content__products products">
       <ul class="products__list">
         <li class="products__item product">
-          <img class="product__image" src="img/catalog/photo-1-mobile 1.jpg" width="260" height="195"
-            alt="Фотография вязанного зайчика в синей одежде">
+          <picture>
+            <source srcset="img/catalog/photo-1-desktop.jpg, img/catalog/photo-1-desktop@2x.jpg 2x" media="(min-width: 1150px)">
+            <source srcset="img/catalog/photo-1-tablet.jpg, img/catalog/photo-1-tablet@2x.jpg 2x" media="(min-width: 768px)">
+            <img class="product__image" src="img/catalog/photo-1-mobile.jpg" srcset="img/catalog/photo-1-mobile@2x.jpg 2x" width="260" height="195" alt="Фотография вязанного зайчика в синей одежде">
+          </picture>
           <div class="product__desc">
             <div class="product__info-wrapper">
               <p class="product__name product__name--toy">Зайчик-попрыгайчик</p>
@@ -65,8 +68,12 @@
           </div>
         </li>
         <li class="products__item product">
-          <img class="product__image" src="img/catalog/photo-2-mobile 1.jpg" width="260" height="195"
-            alt="Фотография красно-белой вязанной корзинки с бельём">
+          <picture>
+            <source srcset="img/catalog/photo-2-desktop.jpg, img/catalog/photo-2-desktop@2x.jpg 2x" media="(min-width: 1150px)">
+            <source srcset="img/catalog/photo-2-tablet.jpg, img/catalog/photo-2-tablet@2x.jpg 2x" media="(min-width: 768px)">
+            <img class="product__image" src="img/catalog/photo-2-mobile.jpg" srcset="img/catalog/photo-2-mobile@2x.jpg 2x" width="260" height="195" alt="Фотография красно-белой вязанной корзинки с бельём">
+          </picture>
+
           <div class="product__desc">
             <div class="product__info-wrapper">
               <p class="product__name product__name--basket">Корзинка для белья</p>
@@ -76,8 +83,11 @@
           </div>
         </li>
         <li class="products__item product">
-          <img class="product__image product__image--toy-cart" src="img/catalog/photo-3-mobile 1.jpg" width="260"
-            height="195" alt="Фотография большой бело-зелёной корзинки с плюшевыми игрушками">
+          <picture>
+            <source srcset="img/catalog/photo-3-desktop.jpg, img/catalog/photo-3-desktop@2x.jpg 2x" media="(min-width: 1150px)">
+            <source srcset="img/catalog/photo-3-tablet.jpg, img/catalog/photo-3-tablet@2x.jpg 2x" media="(min-width: 768px)">
+            <img class="product__image" src="img/catalog/photo-3-mobile.jpg" srcset="img/catalog/photo-3-mobile@2x.jpg 2x" width="260" height="195" alt="Фотография большой бело-зелёной корзинки с плюшевыми игрушками">
+          </picture>
           <div class="product__desc">
             <div class="product__info-wrapper">
               <p class="product__name product__name--big-basket">Большая корзинка<br> для игрушек</p>
