--- a/source/form.html
+++ b/source/form.html
@@ -22,25 +22,45 @@
           </a>
         </li>
         <li class="menu__item menu__item--catalog">
-          <a class="menu__link" href="catalog.html">Каталог товаров</a>
+          <a class="menu__link" href="catalog.html">
+            <span class="menu__text">Каталог товаров</span>
+          </a>
         </li>
         <li class="menu__item menu__item--form">
-          <a class="menu__link" href="form.html">Вязание на заказ</a>
+          <a class="menu__link" href="form.html">
+            <span class="menu__text">Вязание на заказ</span>
+          </a>
         </li>
         <li class="menu__item menu__item--search">
-          <a class="menu__link" href="">Поиск по сайту</a>
+          <a class="menu__link" href="">
+            <svg class="menu__icon" width="18" height="18">
+              <use xlink:href="sprite.svg#search"></use>
+            </svg>
+            <span class="menu__text">Поиск по сайту</span>
+          </a>
         </li>
         <li class="menu__item menu__item--cart">
-          <a class="menu__link" href="">Корзина: пока пуста</a>
+          <a class="menu__link" href="">
+            <svg class="menu__icon" width="21" height="18">
+              <use xlink:href="sprite.svg#cart"></use>
+            </svg>
+            <span class="menu__text">Корзина: пока пуста</span>
+          </a>
         </li>
         <li class="menu__item menu__item--delivery menu__item--tablet">
-          <a class="menu__link" href="">Бесплатная доставка по России</a>
+          <a class="menu__link" href="">
+            <span class="menu__text">Бесплатная доставка по России</span>
+          </a>
         </li>
         <li class="menu__item  menu__item--new menu__item--desktop">
-          <a class="menu__link" href="">Новые поступления</a>
+          <a class="menu__link" href="">
+            <span class="menu__text">Новые поступления</span>
+          </a>
         </li>
         <li class="menu__item menu__item--sale menu__item--desktop">
-          <a class="menu__link" href="">Распродажа</a>
+          <a class="menu__link" href="">
+            <span class="menu__text">Распродажа</span>
+          </a>
         </li>
       </ul>
     </nav>
