--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Мишка</title>
 </head>
+
 <body class="page">
   <header class="page__heder header">
     <nav class="header__menu menu">
@@ -72,12 +73,18 @@
       <div class="promo__title-wrapper">
         <h2 class="promo__title">Милые штуки<br> ручной <br> работы для дома</h2>
       </div>
-      <div class="promo__block promo-block promo-block--light">
+      <a class="promo__block promo-block promo-block--light" href="catalog.html">
         <p class="promo-block__name">Предметы интерьера</p>
-      </div>
-      <div class="promo__block promo-block promo-block--dark">
+        <svg class="promo-block__icon promo-block__icon--interior" width="40" height="62">
+          <use xlink:href="sprite.svg#interior"></use>
+        </svg>
+      </a>
+      <a class="promo__block promo-block promo-block--dark" href="catalog.html">
         <p class="promo-block__name">Детские игрушки</p>
-      </div>
+        <svg class="promo-block__icon promo-block__icon--toy" width="60" height="60">
+          <use xlink:href="sprite.svg#toy"></use>
+        </svg>
+      </a>
     </section>
 
     <section class="main-product">
@@ -179,10 +186,10 @@
         </article>
         <div class="slider__controls">
           <button class="slider__button slider__button--backward">
-            <span class="visually-hidden">Назад</span>
+            <img class="slider__button-icon" src="img/huge-arrow-left.svg" width="50" height="26" alt="Назад">
           </button>
           <button class="slider__button slider__button--forward">
-            <span class="visually-hidden">Вперёд</span>
+            <img class="slider__button-icon" src="img/huge-arrow-right.svg" width="50" height="26" alt="Вперёд">
           </button>
         </div>
       </div>
@@ -197,9 +204,9 @@
             e-mail:
           </span>
           <div class="contacts__mail">
-            <span class="contacts__mail-text">
+            <a class="contacts__mail-text" href="mailto:info@mimimishkashop.ru">
               info@mimimishkashop.ru
-            </span>
+            </a>
           </div>
         </div>
         <div class="contacts__item">
