--- a/source/index.html
+++ b/source/index.html
@@ -112,10 +112,12 @@
           </tr>
         </table>
         <picture class="main-product__picture">
-          <source srcset="img/index/triple-set-desktop.jpg, img/index/triple-set-desktop@2x.jpg 2x"
-            media="(min-width: 1150px)">
-          <source srcset="img/index/triple-set-tablet.jpg, img/index/triple-set-tablet@2x.jpg 2x"
-            media="(min-width: 768px)">
+          <source type="image/webp" srcset="img/index/webp/triple-set-desktop.webp, img/index/webp/triple-set-desktop@2x.webp 2x" media="(min-width: 1150px)">
+          <source type="image/webp" srcset="img/index/webp/triple-set-tablet.webp, img/index/webp/triple-set-tablet@2x.webp 2x" media="(min-width: 768px)">
+          <source type="image/webp" srcset="img/index/webp/triple-set-mobile@2x.webp 2x">
+
+          <source srcset="img/index/triple-set-desktop.jpg, img/index/triple-set-desktop@2x.jpg 2x" media="(min-width: 1150px)">
+          <source srcset="img/index/triple-set-tablet.jpg, img/index/triple-set-tablet@2x.jpg 2x" media="(min-width: 768px)">
           <img class="main-product__image" src="img/index/triple-set-mobile.jpg"
             srcset="img/index/triple-set-mobile@2x.jpg 2x" width="260px" height="315px" alt="Три вязанных корзинки">
         </picture>
