--- a/source/catalog.html
+++ b/source/catalog.html
@@ -76,9 +76,13 @@
         <li class="products__item product">
           <a class="product__link" href="#">
             <picture>
+              <source type="image/webp" srcset="img/catalog/webp/photo-1-desktop.webp, img/catalog/webp/photo-1-desktop@2x.webp 2x" media="(min-width: 1150px)">
+              <source type="image/webp" srcset="img/catalog/webp/photo-1-tablet.webp, img/catalog/webp/photo-1-tablet@2x.webp 2x" media="(min-width: 768px)">
+              <source type="image/webp" srcset="img/catalog/webp/photo-1-mobile.webp, iimg/catalog/webp/photo-1-mobile.webp 2x">
+
               <source srcset="img/catalog/photo-1-desktop.jpg, img/catalog/photo-1-desktop@2x.jpg 2x" media="(min-width: 1150px)">
               <source srcset="img/catalog/photo-1-tablet.jpg, img/catalog/photo-1-tablet@2x.jpg 2x" media="(min-width: 768px)">
-              <img class="product__image" src="img/catalog/photo-1-mobile.jpg" srcset="img/catalog/photo-1-mobile@2x.jpg 2x" width="260" height="195" alt="Фотография вязанного зайчика в синей одежде">
+              <img class="product__image" src="img/catalog/photo-1-mobile.jpg" srcset="img/catalog/photo-1-mobile.jpg" width="260" height="195" alt="Фотография вязанного зайчика в синей одежде">
             </picture>
           </a>
           <div class="product__desc">
@@ -98,6 +102,10 @@
         <li class="products__item product">
           <a class="product__link" href="#">
             <picture>
+              <source type="image/webp" srcset="img/catalog/webp/photo-2-desktop.webp, img/catalog/webp/photo-2-desktop@2x.webp 2x" media="(min-width: 1150px)">
+              <source type="image/webp" srcset="img/catalog/webp/photo-2-tablet.webp, img/catalog/webp/photo-2-tablet@2x.webp 2x" media="(min-width: 768px)">
+              <source type="image/webp" srcset="img/catalog/webp/photo-2-mobile.webp, iimg/catalog/webp/photo-2-mobile.webp 2x">
+
               <source srcset="img/catalog/photo-2-desktop.jpg, img/catalog/photo-2-desktop@2x.jpg 2x" media="(min-width: 1150px)">
               <source srcset="img/catalog/photo-2-tablet.jpg, img/catalog/photo-2-tablet@2x.jpg 2x" media="(min-width: 768px)">
               <img class="product__image" src="img/catalog/photo-2-mobile.jpg" srcset="img/catalog/photo-2-mobile@2x.jpg 2x" width="260" height="195" alt="Фотография красно-белой вязанной корзинки с бельём">
@@ -120,6 +128,10 @@
         <li class="products__item product">
           <a class="product__link" href="#">
             <picture>
+              <source type="image/webp" srcset="img/catalog/webp/photo-3-desktop.webp, img/catalog/webp/photo-3-desktop@2x.webp 2x" media="(min-width: 1150px)">
+              <source type="image/webp" srcset="img/catalog/webp/photo-3-tablet.webp, img/catalog/webp/photo-3-tablet@2x.webp 2x" media="(min-width: 768px)">
+              <source type="image/webp" srcset="img/catalog/webp/photo-3-mobile.webp, iimg/catalog/webp/photo-3-mobile.webp 2x">
+
               <source srcset="img/catalog/photo-3-desktop.jpg, img/catalog/photo-3-desktop@2x.jpg 2x" media="(min-width: 1150px)">
               <source srcset="img/catalog/photo-3-tablet.jpg, img/catalog/photo-3-tablet@2x.jpg 2x" media="(min-width: 768px)">
               <img class="product__image" src="img/catalog/photo-3-mobile.jpg" srcset="img/catalog/photo-3-mobile@2x.jpg 2x" width="260" height="195" alt="Фотография большой бело-зелёной корзинки с плюшевыми игрушками">
@@ -181,17 +193,43 @@
   </section>
   <div class="overlay"></div>
   <footer class="page__footer footer">
-    <div class="footer__logo logo">
-      <img class="logo__image" src="img/logo-footer.svg" width="102" height="34" alt="Логотип 'Мишка'">
+    <div class="footer__logo">
+      <a class="footer__logo-link" href="index.html">
+        <svg class="footer__logo-image" width="102" height="34" alt="Логотип 'Мишка'">
+          <use xlink:href="sprite.svg#logo-footer"></use>
+        </svg>
+      </a>
     </div>
     <ul class="footer__socials socials">
-      <li class="socials__item socials__item--instagram"></li>
-      <li class="socials__item socials__item--facebook"></li>
-      <li class="socials__item socials__item--twitter"></li>
+      <li class="socials__item socials__item--instagram">
+        <a class="socials__link" href="#">
+          <svg class="socials__icon" width="22" height="22" alt="Instagram">
+            <use xlink:href="sprite.svg#instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="socials__item socials__item--facebook">
+        <a class="socials__link" href="#">
+          <svg class="socials__icon" width="15" height="28" alt="Facebook">
+            <use xlink:href="sprite.svg#facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="socials__item socials__item--twitter">
+        <a class="socials__link" href="#">
+          <svg class="socials__icon" width="23" height="20" alt="Twitter">
+            <use xlink:href="sprite.svg#twitter"></use>
+          </svg>
+        </a>
+      </li>
     </ul>
-    <div class="footer__creator creator">
-      <p class="creator__desc">Разработано</p>
-      <img class="creator__logo" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Академии">
+    <div class="footer__copyright copyright ">
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+        <p class="copyright__desc">Разработано</p>
+        <svg class="copyright__logo" width="27" height="35" alt="Логотип HTML Академии">
+          <use xlink:href="sprite.svg#academy"></use>
+        </svg>
+      </a>
     </div>
   </footer>
 </body>
