Добавил скрипт открытия/закрытия модального окна

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -191,7 +191,7 @@
       <button class="modal__button" type="submit">Добавить</button>
     </form>
   </section>
-  <div class="overlay"></div>
+  <div class="page__overlay"></div>
   <footer class="page__footer footer">
     <div class="footer__logo">
       <a class="footer__logo-link" href="index.html">
@@ -232,6 +232,6 @@
       </a>
     </div>
   </footer>
+  <script src="scripts/modal_catalog.js"></script>
 </body>
-
 </html>
