--- a/source/index.html
+++ b/source/index.html
@@ -248,7 +248,7 @@
       <button class="modal__button" type="submit">Добавить</button>
     </form>
   </section>
-  <div class="overlay"></div>
+  <div class="page__overlay"></div>
 
   <footer class="page__footer footer">
     <div class="footer__logo">
@@ -290,5 +290,6 @@
       </a>
     </div>
   </footer>
+  <script src="scripts/modal_index.js"></script>
 </body>
 </html>
