Добавил скрипт открытия/закрытия мобильного меню

--- a/source/index.html
+++ b/source/index.html
@@ -291,5 +291,6 @@
     </div>
   </footer>
   <script src="scripts/modal_index.js"></script>
+  <script src="scripts/mobile-menu.js"></script>
 </body>
 </html>
