--- a/source/catalog.html
+++ b/source/catalog.html
@@ -233,5 +233,6 @@
     </div>
   </footer>
   <script src="scripts/modal_catalog.js"></script>
+  <script src="scripts/mobile-menu.js"></script>
 </body>
 </html>
