Поправил скрипт и увеличил размер кнопки в шапке

--- a/source/index.html
+++ b/source/index.html
@@ -296,7 +296,7 @@
       </a>
     </div>
   </footer>
-  <script src="scripts/modal_index.js"></script>
   <script src="scripts/mobile-menu.js"></script>
+  <script src="scripts/modal_catalog.js"></script>
 </body>
 </html>
